tests/modules/bad/unknown_import.hel
// @name unknown_import
// @phase modules
// @expect error

import does_not_exist

main = () : IO<()> {
    0
}
